{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 147,
  "lineage": "9cd95609-0638-6e91-23e5-c5e7e10803a6",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce21b51cb31a48b8",
            "arn": "arn:aws:ec2:us-west-2:672223761426:instance/i-09216e98a0db3fc11",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09216e98a0db3fc11",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eaa1dc3025ad7bd3",
            "private_dns": "ip-10-0-4-67.us-west-2.compute.internal",
            "private_ip": "10.0.4.67",
            "public_ip": "18.237.117.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b3c4ee29448fef7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b8f3792a1c1102b",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-073817e954aaee07e"
            ]
          }
        }
      ]
    },
    {
      "module": "module.nginx1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce21b51cb31a48b8",
            "arn": "arn:aws:ec2:us-west-2:672223761426:instance/i-02c8aa530407b4a25",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c8aa530407b4a25",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d98f5cace1a77e33",
            "private_dns": "ip-10-0-3-222.us-west-2.compute.internal",
            "private_ip": "10.0.3.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0748ce0b3a23d6ce8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8728d13c3d22eae",
            "tags": {
              "Name": "nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032cbd7b13a7add2f"
            ]
          }
        }
      ]
    },
    {
      "module": "module.nginx2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce21b51cb31a48b8",
            "arn": "arn:aws:ec2:us-west-2:672223761426:instance/i-03b543c269148310f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03b543c269148310f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c480310ebb6ef13b",
            "private_dns": "ip-10-0-4-121.us-west-2.compute.internal",
            "private_ip": "10.0.4.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-026583f2e4f2d8428",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b8f3792a1c1102b",
            "tags": {
              "Name": "nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032cbd7b13a7add2f"
            ]
          }
        }
      ]
    },
    {
      "module": "module.app2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce21b51cb31a48b8",
            "arn": "arn:aws:ec2:us-west-2:672223761426:instance/i-08556a417386cfb53",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08556a417386cfb53",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e229c29353210602",
            "private_dns": "ip-10-0-2-246.us-west-2.compute.internal",
            "private_ip": "10.0.2.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01e527e33f40e3103",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026098a583493ff44",
            "tags": {
              "Name": "app2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e10946139158f261"
            ]
          }
        }
      ]
    },
    {
      "module": "module.app1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce21b51cb31a48b8",
            "arn": "arn:aws:ec2:us-west-2:672223761426:instance/i-07054c6e86a3d5f46",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07054c6e86a3d5f46",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0950a5e54b6739cb0",
            "private_dns": "ip-10-0-1-129.us-west-2.compute.internal",
            "private_ip": "10.0.1.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05174a5e395af90fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe8426301c01f4ed",
            "tags": {
              "Name": "app1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e10946139158f261"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09e1b9fa02d203f23",
            "owner_id": "672223761426",
            "tags": {
              "Name": "terraformGateway"
            },
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priR",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-050ae9d5b66a6e365",
            "owner_id": "672223761426",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "priR"
            },
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubR",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08f0da9d33e0c635b",
            "owner_id": "672223761426",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e1b9fa02d203f23",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubR"
            },
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce0c7a67d2ea8abf",
            "route_table_id": "rtb-08f0da9d33e0c635b",
            "subnet_id": "subnet-0c8728d13c3d22eae"
          },
          "depends_on": [
            "aws_route_table.pubR",
            "aws_subnet.firstPublicSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062ef1c459494ee74",
            "route_table_id": "rtb-08f0da9d33e0c635b",
            "subnet_id": "subnet-01b8f3792a1c1102b"
          },
          "depends_on": [
            "aws_route_table.pubR",
            "aws_subnet.secondPublicSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8dbe8be1e0df6ce",
            "route_table_id": "rtb-050ae9d5b66a6e365",
            "subnet_id": "subnet-0fe8426301c01f4ed"
          },
          "depends_on": [
            "aws_route_table.priR",
            "aws_subnet.firstPrivateSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0cf79e7fb2456e4",
            "route_table_id": "rtb-050ae9d5b66a6e365",
            "subnet_id": "subnet-026098a583493ff44"
          },
          "depends_on": [
            "aws_route_table.priR",
            "aws_subnet.secondPrivateSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:672223761426:security-group/sg-0e10946139158f261",
            "description": "Allow ssh inbound traffic from vpc",
            "egress": [],
            "id": "sg-0e10946139158f261",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow inpound ssh from vpc",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "appSSH",
            "name_prefix": null,
            "owner_id": "672223761426",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastionSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:672223761426:security-group/sg-073817e954aaee07e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow inpound ssh to ec2s in the vpc ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-073817e954aaee07e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inpound ssh from all",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH",
            "name_prefix": null,
            "owner_id": "672223761426",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:672223761426:security-group/sg-032cbd7b13a7add2f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outpound HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outpound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-032cbd7b13a7add2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow inpound ssh from only vpc ec2s",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_WebTrafic",
            "name_prefix": null,
            "owner_id": "672223761426",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firstPrivateSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:672223761426:subnet/subnet-0fe8426301c01f4ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fe8426301c01f4ed",
            "map_public_ip_on_launch": false,
            "owner_id": "672223761426",
            "tags": {
              "Name": "firstPrivateSubnet"
            },
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firstPublicSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:672223761426:subnet/subnet-0c8728d13c3d22eae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c8728d13c3d22eae",
            "map_public_ip_on_launch": false,
            "owner_id": "672223761426",
            "tags": {
              "Name": "firstPublicSubnet"
            },
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondPrivateSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:672223761426:subnet/subnet-026098a583493ff44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-026098a583493ff44",
            "map_public_ip_on_launch": false,
            "owner_id": "672223761426",
            "tags": {
              "Name": "secondPrivateSubnet"
            },
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondPublicSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:672223761426:subnet/subnet-01b8f3792a1c1102b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-01b8f3792a1c1102b",
            "map_public_ip_on_launch": false,
            "owner_id": "672223761426",
            "tags": {
              "Name": "secondPublicSubnet"
            },
            "vpc_id": "vpc-040ea2f07d6c32fa2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:672223761426:vpc/vpc-040ea2f07d6c32fa2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0230d541a2a6bec90",
            "default_route_table_id": "rtb-0616d29afc245cb01",
            "default_security_group_id": "sg-039e9077fdac96a76",
            "dhcp_options_id": "dopt-d1b526a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-040ea2f07d6c32fa2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0616d29afc245cb01",
            "owner_id": "672223761426",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}